logs/dag_id=Summer_Warped_ETL/run_id=manual__2023-05-08T16:02:34.709403+00:00/task_id=LoadData.LoadCalendar/attempt=1.log
[2023-05-08T16:03:23.342+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Summer_Warped_ETL.LoadData.LoadCalendar manual__2023-05-08T16:02:34.709403+00:00 [queued]>
[2023-05-08T16:03:23.348+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Summer_Warped_ETL.LoadData.LoadCalendar manual__2023-05-08T16:02:34.709403+00:00 [queued]>
[2023-05-08T16:03:23.349+0000] {taskinstance.py:1331} INFO - Starting attempt 1 of 3
[2023-05-08T16:03:23.357+0000] {taskinstance.py:1350} INFO - Executing <Task(PostgresOperator): LoadData.LoadCalendar> on 2023-05-08 16:02:34.709403+00:00
[2023-05-08T16:03:23.362+0000] {standard_task_runner.py:57} INFO - Started process 593 to run task
[2023-05-08T16:03:23.366+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Summer_Warped_ETL', 'LoadData.LoadCalendar', 'manual__2023-05-08T16:02:34.709403+00:00', '--job-id', '2424', '--raw', '--subdir', 'DAGS_FOLDER/warped-dag.py', '--cfg-path', '/tmp/tmpbysclwjd']
[2023-05-08T16:03:23.366+0000] {standard_task_runner.py:85} INFO - Job 2424: Subtask LoadData.LoadCalendar
[2023-05-08T16:03:23.407+0000] {task_command.py:410} INFO - Running <TaskInstance: Summer_Warped_ETL.LoadData.LoadCalendar manual__2023-05-08T16:02:34.709403+00:00 [running]> on host 7b4753e133cb
[2023-05-08T16:03:23.463+0000] {taskinstance.py:1570} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Ananta Moharana' AIRFLOW_CTX_DAG_ID='Summer_Warped_ETL' AIRFLOW_CTX_TASK_ID='LoadData.LoadCalendar' AIRFLOW_CTX_EXECUTION_DATE='2023-05-08T16:02:34.709403+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-05-08T16:02:34.709403+00:00'
[2023-05-08T16:03:23.466+0000] {sql.py:262} INFO - Executing: 
                INSERT INTO calendar (date, month, monthname,dayofmonth,dayofweek,dayname,quarter)
                VALUES ('2023-05-08', 5, 'May',8,0,'Monday',2)
                ON CONFLICT (2023-05-08) DO NOTHING;
                 
[2023-05-08T16:03:23.474+0000] {base.py:73} INFO - Using connection ID '***' for task execution.
[2023-05-08T16:03:23.512+0000] {base.py:73} INFO - Using connection ID '***' for task execution.
[2023-05-08T16:03:23.522+0000] {sql.py:375} INFO - Running statement: 
                INSERT INTO calendar (date, month, monthname,dayofmonth,dayofweek,dayname,quarter)
                VALUES ('2023-05-08', 5, 'May',8,0,'Monday',2)
                ON CONFLICT (2023-05-08) DO NOTHING;
                 , parameters: None
[2023-05-08T16:03:23.523+0000] {taskinstance.py:1847} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "2023"
LINE 4:                 ON CONFLICT (2023-05-08) DO NOTHING;
                                     ^

[2023-05-08T16:03:23.532+0000] {taskinstance.py:1373} INFO - Marking task as UP_FOR_RETRY. dag_id=Summer_Warped_ETL, task_id=LoadData.LoadCalendar, execution_date=20230508T160234, start_date=20230508T160323, end_date=20230508T160323
[2023-05-08T16:03:23.539+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 2424 for task LoadData.LoadCalendar (syntax error at or near "2023"
LINE 4:                 ON CONFLICT (2023-05-08) DO NOTHING;
                                     ^
; 593)
[2023-05-08T16:03:23.578+0000] {local_task_job_runner.py:232} INFO - Task exited with return code 1
[2023-05-08T16:03:23.596+0000] {taskinstance.py:2674} INFO - 0 downstream tasks scheduled from follow-on schedule check
